# ModelGuard

./: .flake8  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT_GUIDE.md  HOW_IT_WORKS.md  IMPLEMENTATION_NOTES.md  MILESTONE_8_REPORT_TEMPLATE.md  MILESTONE_REPORT_SECTIONS.md  MODEL_TEMPORARY_STORAGE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SYSTEM_DESIGN_IMPLEMENTATION.md  demo_system.py  deploy.ps1  deploy.sh  ece461_fall_2025_openapi_spec.yaml  h -u origin refactor-metrics-artifact-system  hf_testing.py  package-lock.json  pyproject.toml  requirements.txt  run  samconfig.toml  tach.toml  tem.py  template.yaml  test_lambda_handler.py  test_prompt.py  testytest.py
.github/: dependabot.yml
docs/: openapi_spec.yaml
frontend/: .env  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
lambdas/: artifact_handler.py  auth_handler.py  cost_audit_handler.py  delete_artifact.py  delete_reset.py  delete_users.py  get_artifact_cost.py  get_artifact_download.py  get_health.py  get_lineage.py  get_model_rate.py  get_search_by_name.py  get_tracks.py  get_users.py  js_runner.js  model_analysis_handler.py  post_artifact_upload.py  post_artifacts.py  post_js_program_upload.py  post_license_check.py  post_package_confusion.py  post_search_by_regex.py  post_users.py  put_artifact_update.py  put_authenticate.py  requirements.txt  search_handler.py  system_handler.py
src/: __init__.py  auth.py  authorization.py  lambda_handlers.py  logger.py  logging_utils.py  main.py  main_new.py  model.py  model_manager.py  permissions.py  replay_prevention.py  (+1 more)
(+165 files in other folders)
