[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ModelGuard"
version = "0.1.0"
dependencies = [
    "requests",
    "pytest",
    "pytest-cov"
]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
skip = [".venv", "venv", ".pytest_cache"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv", ".pytest_cache"]

[tool.mypy]
python_version = "3.11"
disallow_untype_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
show_error_codes = true
ignore_missing_imports = false

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
